added a --with-sockethack option that should give us an _enormous_ boost in netbench performance on Linux/SMP if the corresponding 4 line change is made in the kernel. Note: this is a experimental performance hack only at the moment. Do _not_ enable it until we find a way to make it safe in the kernel, which may not be for a while.

--- a/source/configure.in
+++ b/source/configure.in
@@ -1221,6 +1221,26 @@ AC_ARG_WITH(ssl,
   AC_MSG_RESULT(no)
 )
 
+
+#################################################
+# check for experimental socket performance hack
+AC_MSG_CHECKING(whether to use the socket hack)
+AC_ARG_WITH(sockethack,
+[  --with-sockethack     Include experimental socket hack
+  --without-sockethack  Don't include experimental socket hack (default)],
+[ case "$withval" in
+  yes)
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(WITH_SOCKET_HACK)
+    ;;
+  *)
+    AC_MSG_RESULT(no)
+    ;;
+  esac ],
+  AC_MSG_RESULT(no)
+)
+
+
 #################################################
 # check for experimental mmap support
 AC_MSG_CHECKING(whether to use MMAP)
