--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -119,7 +119,6 @@
 #undef HAVE_CRYPT
 #undef HAVE_PUTPRPWNAM
 #undef HAVE_SET_AUTH_PARAMETERS
-#undef WITH_SOCKET_HACK
 #undef WITH_MMAP
 #undef WITH_SYSLOG
 #undef WITH_SSL
@@ -171,6 +170,7 @@
 #undef HAVE_RPC_AUTH_ERROR_CONFLICT
 #undef HAVE_EXPLICIT_LARGEFILE_SUPPORT
 #undef USE_BOTH_CRYPT_CALLS
+#undef HAVE_BROKEN_FCNTL64_LOCKS
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
