Error message on 'configure --with-ldap' in SAMBA_2_0, as it does not even compile let alone work.
configure: error: LDAP password database not supported in this version.

--- a/source/configure.in
+++ b/source/configure.in
@@ -1148,6 +1148,7 @@ AC_ARG_WITH(ldap,
   yes)
     AC_MSG_RESULT(yes)
     AC_DEFINE(WITH_LDAP)
+    AC_MSG_ERROR([LDAP password database not supported in this version.])
     ;;
   *)
     AC_MSG_RESULT(no)
