check for netinet/ip.h
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6287 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -269,6 +269,7 @@ AC_CHECK_HEADERS([\
 	netinet/in6_machtypes.h			\
 	netinet/in6_var.h			\
 	netinet/in_systm.h			\
+	netinet/ip.h				\
 	netinet6/in6.h				\
 	netinfo/ni.h				\
 	paths.h					\
