--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -25,6 +25,7 @@ libroken_la_SOURCES =		\
 	erealloc.c		\
 	estrdup.c		\
 	ewrite.c		\
+	get_default_username.c	\
 	get_window_size.c	\
 	getarg.c		\
 	inaddr2str.c		\
