(get_default_username): add prototype
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6318 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -252,6 +252,8 @@ struct passwd *k_getpwnam (char *user);
 struct passwd *k_getpwuid (uid_t uid);
 #endif
 
+const char *get_default_username (void);
+
 #ifndef HAVE_SETEUID
 int seteuid(uid_t euid);
 #endif
