--- a/configure.in
+++ b/configure.in
@@ -35,14 +35,14 @@ case "$host" in
 	;;
 esac
 
-AC_CYGWIN
-AC_OBJEXT
-AC_EXEEXT
-
 test -z "$CFLAGS" && CFLAGS="-g"
 
 dnl Checks for programs.
 AC_PROG_CC
+
+AC_CYGWIN
+AC_OBJEXT
+AC_EXEEXT
 
 dnl AC_KRB_PROG_YACC
 AC_PROG_YACC
@@ -74,11 +74,6 @@ AC_TEST_PACKAGE_NEW(krb4,[#include <krb.h>],-lkrb,-ldes,/usr/athena)
 
 LIB_kdb=
 if test "$with_krb4" != "no"; then
-	LIB_kdb="-lkdb -lkrb"
-	if test "$krb4_libdir"; then
-		LIB_krb4="-rpath $krb4_libdir $LIB_krb4"
-		LIB_kdb="-rpath $krb4_libdir -L$krb4_libdir $LIB_kdb"
-	fi
 	EXTRA_LIB45=lib45.a
 	AC_SUBST(EXTRA_LIB45)
 	AC_CACHE_CHECK(for four valued krb_put_int, ac_cv_func_krb_put_int_four,
@@ -111,6 +106,16 @@ if test "$with_krb4" != "no"; then
 			[Define to one if your krb.h doesn't])
 		AC_DEFINE(KRB_VERIFY_SECURE_FAIL, 2,
 			[Define to two if your krb.h doesn't])
+	fi
+	save_LIBS="$LIBS"
+	LIBS="$LIB_krb4 $LIBS"
+	AC_FIND_FUNC(krb_enable_debug)
+	AC_FIND_FUNC(krb_disable_debug)
+	LIBS="$save_LIBS"
+	LIB_kdb="-lkdb -lkrb"
+	if test "$krb4_libdir"; then
+		LIB_krb4="-rpath $krb4_libdir $LIB_krb4"
+		LIB_kdb="-rpath $krb4_libdir -L$krb4_libdir $LIB_kdb"
 	fi
 fi
 AM_CONDITIONAL(KRB4, test "$with_krb4" != "no")
