(INCLUDES): add $(INCLUDE_krb4)
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6353 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/telnet/telnet/Makefile.am
+++ b/appl/telnet/telnet/Makefile.am
@@ -2,7 +2,7 @@
 
 include $(top_srcdir)/Makefile.am.common
 
-INCLUDES += -I$(srcdir)/..
+INCLUDES += -I$(srcdir)/.. $(INCLUDE_krb4)
 
 bin_PROGRAMS = telnet
 
