Added glibc2.1 fix for sparc. lib/util_sock.c: Added strerror missing from error log. smbd/open.c: Added check that file length >0 before doing mmap. utils/testparm.c: oplock level II test. Jeremy.

--- a/source/configure.in
+++ b/source/configure.in
@@ -145,7 +145,7 @@ exit(1);
     *linux*|*hurd*)
         AC_MSG_CHECKING([for LFS support])
         old_CPPFLAGS="$CPPFLAGS"
-        CPPFLAGS="-D_LARGEFILE64_SOURCE $CPPFLAGS"
+        CPPFLAGS="-D_LARGEFILE64_SOURCE -D_GNU_SOURCE $CPPFLAGS"
         AC_TRY_RUN([
 #include <unistd.h>
 main () {
@@ -157,7 +157,7 @@ exit(1);
 }], [GLIBC_LFS_SUPPORT=yes], [GLIBC_LFS_SUPPORT=no], [GLIBC_LFS_SUPPORT=cross])
         CPPFLAGS="$old_CPPFLAGS"
         if test x$GLIBC_LFS_SUPPORT = xyes ; then
-          CPPFLAGS="-D_LARGEFILE64_SOURCE $CPPFLAGS"
+          CPPFLAGS="-D_LARGEFILE64_SOURCE -D_GNU_SOURCE $CPPFLAGS"
         fi
       AC_MSG_RESULT([$GLIBC_LFS_SUPPORT])
     ;;
