--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -184,7 +184,7 @@ SMBD_OBJ1 = smbd/server.o smbd/files.o smbd/chgpasswd.o smbd/connection.o \
             smbd/$(QUOTAOBJS) smbd/reply.o smbd/ssl.o smbd/trans2.o smbd/uid.o \
 	    smbd/dosmode.o smbd/filename.o smbd/open.o smbd/close.o smbd/blocking.o \
 	    smbd/process.o smbd/oplock.o smbd/service.o smbd/error.o smbd/vfs.o \
-	    smbd/vfs-wrap.o printing/nt_printing.o
+	    smbd/vfs-wrap.o printing/nt_printing.o smbd/dfs.o
 
 PRINTING_OBJ = printing/pcap.o printing/print_svid.o printing/printing.o
 
