handle not building X programs
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6450 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -213,14 +213,17 @@ AC_C_INLINE
 KRB_CHECK_X
 
 if test "$no_x" = "yes" ; then
-	MAKE_X_PROGS_BIN=""
-	MAKE_X_PROGS_LIBEXEC=""
+	MAKE_X_PROGS_BIN_PROGS=""
+	MAKE_X_PROGS_BIN_SCRPTS=""
+	MAKE_X_PROGS_LIBEXEC_PROGS=""
 else
-	MAKE_X_PROGS_BIN='$(X_PROGS_BIN)'
-	MAKE_X_PROGS_LIBEXEC='$(X_PROGS_LIBEXEC)'
+	MAKE_X_PROGS_BIN_PROGS='$(X_PROGS_BIN_PROGS)'
+	MAKE_X_PROGS_BIN_SCRPTS='$(X_PROGS_BIN_SCRPTS)'
+	MAKE_X_PROGS_LIBEXEC_PROGS='$(X_PROGS_LIBEXEC_PROGS)'
 fi
-AC_SUBST(MAKE_X_PROGS_BIN)dnl
-AC_SUBST(MAKE_X_PROGS_LIBEXEC)dnl
+AC_SUBST(MAKE_X_PROGS_BIN_PROGS)dnl
+AC_SUBST(MAKE_X_PROGS_BIN_SCRPTS)dnl
+AC_SUBST(MAKE_X_PROGS_LIBEXEC_PROGS)dnl
 
 AC_CHECK_XAU
 
