--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -248,7 +248,7 @@ char* getcwd(char *path, size_t size);
 
 #ifdef HAVE_PWD_H
 #include <pwd.h>
-struct passwd *k_getpwnam (char *user);
+struct passwd *k_getpwnam (const char *user);
 struct passwd *k_getpwuid (uid_t uid);
 #endif
 
