Updated with Andrew's changes. Jeremy.

--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -134,6 +134,7 @@
 #undef HAVE_FILE_MACRO
 #undef HAVE_FUNCTION_MACRO
 #undef HAVE_SETRESUID_DECL
+#undef HAVE_CRYPT_DECL
 #undef HAVE_SETRESUID
 #undef WITH_NETATALK
 #undef HAVE_INO64_T
