- added check for FCVT - use FCVT in snprintf if available, to support large floats

--- a/source/configure.in
+++ b/source/configure.in
@@ -346,7 +346,7 @@ AC_CHECK_FUNCS(initgroups select rdchk getgrnam pathconf setreuid setregid seteu
 AC_CHECK_FUNCS(setpriv setgidx setuidx setgroups mktime rename ftruncate stat64 fstat64)
 AC_CHECK_FUNCS(lstat64 fopen64 atexit grantpt dup2 lseek64 ftruncate64 readdir64)
 AC_CHECK_FUNCS(fseek64 fseeko64 ftell64 ftello64 setluid yp_get_default_domain getpwanam)
-AC_CHECK_FUNCS(srandom random srand rand setenv usleep mmap64 strcasecmp)
+AC_CHECK_FUNCS(srandom random srand rand setenv usleep mmap64 strcasecmp fcvt fcvtl)
 
 # syscall() is needed for smbwrapper.
 AC_CHECK_FUNCS(syscall)
