--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -134,7 +134,6 @@
 #undef HAVE_FILE_MACRO
 #undef HAVE_FUNCTION_MACRO
 #undef HAVE_SETRESUID_DECL
-#undef HAVE_CRYPT_DECL
 #undef HAVE_SETRESUID
 #undef WITH_NETATALK
 #undef HAVE_INO64_T
@@ -429,6 +428,12 @@
 
 /* Define if you have the execl function.  */
 #undef HAVE_EXECL
+
+/* Define if you have the fcvt function.  */
+#undef HAVE_FCVT
+
+/* Define if you have the fcvtl function.  */
+#undef HAVE_FCVTL
 
 /* Define if you have the fopen64 function.  */
 #undef HAVE_FOPEN64
