--- a/lib/roken/Makefile.in
+++ b/lib/roken/Makefile.in
@@ -50,12 +50,15 @@ SOURCES = \
 	fchown.c \
 	flock.c \
 	fnmatch.c \
+	freehostent.c \
 	get_window_size.c \
 	getarg.c \
 	getcwd.c \
 	get_default_username.c \
 	getdtablesize.c \
 	gethostname.c \
+	getipnodebyaddr.c \
+	getipnodebyname.c \
 	getopt.c \
 	getusershell.c \
 	glob.c \
