(libroken_la_SOURCES): add copyhostent.c, freehostent.c, getipnodebyname.c, getipnodebyaddr.c
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6475 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -20,14 +20,18 @@ endif
 libroken_la_SOURCES =		\
 	base64.c		\
 	concat.c		\
+	copyhostent.c		\
 	emalloc.c		\
 	eread.c			\
 	erealloc.c		\
 	estrdup.c		\
 	ewrite.c		\
+	freehostent.c		\
 	get_default_username.c	\
 	get_window_size.c	\
 	getarg.c		\
+	getipnodebyaddr.c	\
+	getipnodebyname.c	\
 	inaddr2str.c		\
 	issuid.c		\
 	k_getpwnam.c		\
