--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -234,6 +234,9 @@ NMBLOOKUP_OBJ = utils/nmblookup.o $(PARAM_OBJ) $(UBIQX_OBJ) \
 SMBTORTURE_OBJ = utils/torture.o utils/nbio.o $(LIBSMB_OBJ) $(PARAM_OBJ) \
                  $(UBIQX_OBJ) $(LIB_OBJ)
 
+MASKTEST_OBJ = utils/masktest.o $(LIBSMB_OBJ) $(PARAM_OBJ) \
+                 $(UBIQX_OBJ) $(LIB_OBJ)
+
 RPCTORTURE_OBJ = utils/rpctorture.o \
              rpcclient/display.o \
              rpcclient/cmd_lsarpc.o \
@@ -264,6 +267,8 @@ all : CHECK $(SPROGS) $(PROGS)
 smbwrapper : CHECK bin/smbsh bin/smbwrapper.@SHLIBEXT@ @WRAP32@
 
 smbtorture : CHECK bin/smbtorture
+
+masktest : CHECK bin/masktest
 
 rpctorture : CHECK bin/rpctorture
 
@@ -407,6 +412,10 @@ bin/make_printerdef: $(MAKE_PRINTERDEF_OBJ) bin/.dummy
 bin/smbtorture: $(SMBTORTURE_OBJ) bin/.dummy
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(SMBTORTURE_OBJ) $(LDFLAGS) $(LIBS)
+
+bin/masktest: $(MASKTEST_OBJ) bin/.dummy
+	@echo Linking $@
+	@$(CC) $(FLAGS) -o $@ $(MASKTEST_OBJ) $(LDFLAGS) $(LIBS)
 
 bin/rpctorture: $(RPCTORTURE_OBJ) bin/.dummy
 	@echo Linking $@
