--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ AC_REVISION($Revision$)
 AC_INIT(lib/krb5/send_to_kdc.c)
 AM_CONFIG_HEADER(include/config.h)
 
-AM_INIT_AUTOMAKE(heimdal,0.1h)
+AM_INIT_AUTOMAKE(heimdal,0.1i)
 
 AC_PREFIX_DEFAULT(/usr/heimdal)
 
@@ -692,6 +692,10 @@ AC_HAVE_STRUCT_FIELD(struct utmpx, ut_exit, [#include <utmpx.h>])
 AC_HAVE_STRUCT_FIELD(struct utmpx, ut_syslen, [#include <utmpx.h>])
 
 AC_KRB_IPV6
+
+AC_CHECK_TYPE_EXTRA(sa_family_t, unsigned short, [#include <sys/socket.h>])
+
+AC_HAVE_TYPE([struct sockaddr_storage])
 
 dnl
 dnl Check for struct winsize
