--- a/configure.in
+++ b/configure.in
@@ -693,9 +693,9 @@ AC_HAVE_STRUCT_FIELD(struct utmpx, ut_syslen, [#include <utmpx.h>])
 
 AC_KRB_IPV6
 
-AC_CHECK_TYPE_EXTRA(sa_family_t, unsigned short, [#include <sys/socket.h>])
+AC_HAVE_TYPE([sa_family_t],[#include <sys/socket.h>])
 
-AC_HAVE_TYPE([struct sockaddr_storage])
+AC_HAVE_TYPE([struct sockaddr_storage], [#include <sys/socket.h>])
 
 dnl
 dnl Check for struct winsize
