(AC_PROG_AWK): disable. mawk seems to mishandle \# in lib/roken/roken.awk
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6539 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -51,7 +51,9 @@ dnl AC_KRB_PROG_YACC
 AC_PROG_YACC
 AM_PROG_LEX
 AC_PROG_RANLIB
-AC_PROG_AWK
+dnl AC_PROG_AWK
+dnl mawk seems to mishandle \# in lib/roken/roken.awk
+AC_CHECK_PROGS(AWK, gawk nawk awk, )
 AC_KRB_PROG_LN_S
 
 AC_MIPS_ABI
