(install-build-headers): add dependencies
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6608 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -60,7 +60,7 @@ install-suid-programs:
 
 install-exec-hook: install-suid-programs
 
-install-build-headers::
+install-build-headers:: $(include_HEADERS) $(build_HEADERZ)
 	@foo='$(include_HEADERS) $(build_HEADERZ)'; \
 	for f in $$foo; do \
 		f=`basename $$f`; \
