(EXTRA_libroken_la_SOURCES): add inet_pton
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6618 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -78,6 +78,7 @@ EXTRA_libroken_la_SOURCES =	\
 	hstrerror.c		\
 	inet_aton.c		\
 	inet_ntop.c		\
+	inet_pton.c		\
 	initgroups.c		\
 	innetgr.c		\
 	iruserok.c		\
