(inet_pton): add prototype
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6621 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -250,6 +250,11 @@ const char *
 inet_ntop(int af, const void *src, char *dst, size_t size);
 #endif
 
+#ifndef HAVE_INET_PTON
+int
+inet_pton(int af, const char *src, void *dst);
+#endif
+
 #if !defined(HAVE_GETCWD)
 char* getcwd(char *path, size_t size);
 #endif
