--- a/configure.in
+++ b/configure.in
@@ -363,7 +363,6 @@ AC_FIND_FUNC(syslog, syslog)
 AC_FIND_FUNC_NO_LIBS(logwtmp, util)
 AC_FIND_FUNC_NO_LIBS(tgetent, termcap ncurses curses)
 AC_FIND_FUNC(gethostbyname2, inet6 ip6)
-AC_CHECK_FUNCS(inet_pton)
 
 AC_FIND_FUNC(res_search, resolv,
 [
@@ -507,7 +506,8 @@ AC_BROKEN(chown copyhostent daemon err errx fchown flock fnmatch freehostent)
 AC_BROKEN(getcwd getdtablesize gethostname getipnodebyaddr getipnodebyname)
 AC_BROKEN(geteuid getgid getegid)
 AC_BROKEN(getopt getusershell)
-AC_BROKEN(inet_aton inet_ntop initgroups innetgr iruserok lstat memmove)
+AC_BROKEN(inet_aton inet_ntop inet_pton initgroups innetgr iruserok lstat)
+AC_BROKEN(memmove)
 AC_BROKEN(mkstemp putenv rcmd readv recvmsg sendmsg setegid setenv seteuid)
 AC_BROKEN(strcasecmp strncasecmp strdup strerror strftime strlwr)
 AC_BROKEN(strndup strnlen strsep strtok_r strupr)
