(sockaddr_storage): fix typo
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6658 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -437,7 +437,7 @@ typedef unsigned short sa_family_t;
 
 struct sockaddr_storage {
     u_int8_t		__ss_len;
-    sa_familiy_t	__ss_family;
+    sa_family_t		__ss_family;
     char		pad[sizeof(struct sockaddr_in)
 			   - sizeof(u_int8_t) - sizeof(sa_family_t)];
 };
