--- a/appl/login/Makefile.am
+++ b/appl/login/Makefile.am
@@ -32,3 +32,5 @@ login_DEPENDENCIES = $(LIB_roken)
 
 $(srcdir)/login_protos.h:
 	cd $(srcdir); perl ../../cf/make-proto.pl -o login_protos.h $(login_SOURCES) || rm -f login_protos.h
+
+$(login_OBJECTS): $(srcdir)/login_protos.h
