ignore the comlicated aix construct if !krb4
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6790 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kafs/Makefile.am
+++ b/lib/kafs/Makefile.am
@@ -7,8 +7,6 @@ INCLUDES += $(INCLUDE_krb4) $(AFS_EXTRA_DEFS)
 if KRB4
 AFSLIBS = libkafs.la
 else
-AFSLIBS = 
-endif
 
 if AIX
 AFSL_EXP = $(srcdir)/afsl.exp
@@ -37,6 +35,9 @@ else
 AFSL_EXP =
 AIX_SRC =
 endif # AIX
+
+AFSLIBS = 
+endif # KRB4
 
 
 lib_LTLIBRARIES = $(AFSLIBS)
