--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,6 @@ include $(top_srcdir)/Makefile.am.common
 
 SUBDIRS	= include lib kuser kdc admin kadmin kpasswd appl doc
 
-ACLOCAL = @ACLOCAL@ -I $(srcdir)/cf
+ACLOCAL = @ACLOCAL@ -I cf
 
 EXTRA_DIST = Makefile.am.common krb5.conf
