--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -108,7 +108,7 @@ LIB_OBJ = lib/charcnv.o lib/charset.o lib/debug.o lib/fault.o \
 		lib/access.o lib/smbrun.o \
 	  lib/bitmap.o lib/crc32.o lib/util_sid.o lib/snprintf.o \
 		lib/util_str.o lib/util_unistr.o \
-		lib/util_file.o mem_man/mem_man.o \
+		lib/util_file.o lib/util_status.o mem_man/mem_man.o \
 		lib/util_sock.o lib/unix_sec_ctxt.o
 
 
